fix: change giphy api_key and minor css fix on comments section in dark mode

--- a/src/styles/03-elements/_theme.scss
+++ b/src/styles/03-elements/_theme.scss
@@ -85,6 +85,12 @@ body.dark-theme {
         border-radius: 8px;
         cursor: pointer;
     }
+    .commentator {
+        color: $common-black;
+    }
+    .comment {
+        color: $common-black;
+    }
 }
 
 body.white-theme {
