--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -446,6 +446,10 @@ body.dark-theme {
     border: solid 1px rgba(255, 255, 255, 0.4);
     border-radius: 8px;
     cursor: pointer; }
+  body.dark-theme .commentator {
+    color: #000000; }
+  body.dark-theme .comment {
+    color: #000000; }
 
 body.white-theme {
   background-color: #ffffff;
